--- a/music-app/src/index.css
+++ b/music-app/src/index.css
@@ -11,3 +11,10 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+html{
+  background-color: rgb(54, 54, 54);
+}
+h1{
+  color: white;
+}
