--- a/music-app/src/NavBar.css
+++ b/music-app/src/NavBar.css
@@ -55,3 +55,8 @@ ul li ul li {
     background-color: white;
     border: none;
 }
+
+.forceLeft{
+    background-color: white;
+    float: left;
+}
