--- a/music-app/src/components/Home/card.css
+++ b/music-app/src/components/Home/card.css
@@ -1,6 +1,8 @@
 /* music card */
 #card{
   background-color: grey;
+  width: 250px;
+  height: 200px;
   text-align: left;
   display: inline-block;
   padding: 1%;
