--- a/music-app/src/NavBar.css
+++ b/music-app/src/NavBar.css
@@ -4,7 +4,8 @@ ul {
     padding: 0;
 }
 .NavBar{
-    background-color: pink;
+    /*background-color: grey;*/
+    background-image: url("224700.jpg");
     display: flex;
 }
   
@@ -19,19 +20,20 @@ a {
     padding: 8px;
 }
 a:link {
-    color: black;
+    color: whitesmoke;
+    
   }
 /* visited link */
 a:visited {
-    color: black;
+    color: whitesmoke;
   }
 a:hover {
-    background-color: red;
+    background-color: indigo;
 } 
 
 
 ul li {display: inline-block;}
-ul li:hover {background: pink;}
+ul li:hover {background: indigo}
 ul li:hover ul {
     display: block;
     list-style-type: none;
@@ -46,7 +48,7 @@ ul li ul {
   display: none;
 }
 ul li ul li { 
-  background: pink; 
+  background: indianred; 
   display: block; 
   padding: 8px;
 }
@@ -56,7 +58,12 @@ ul li ul li {
     border: none;
 }
 
+/*sign up button centering/style */
 .forceLeft{
-    background-color: white;
-    float: left;
+    background-color: rgb(133, 133, 133);
+    margin-right: 33%;
+    size: 60%;
+    border: 1px solid white;
+   
+
 }
