--- a/music-app/src/components/Home/card.css
+++ b/music-app/src/components/Home/card.css
@@ -1,10 +1,12 @@
 /* music card */
 #card{
-  background-color: grey;
+  /*background-image:url("tealfade.jpg");*/
+  background-image: url("/src/components/Home/wheel.gif");
   width: 250px;
   height: 200px;
-  text-align: left;
-  display: inline-block;
+  opacity: 0.8;
+  
+  display: inline-flex;
   padding: 1%;
   margin: 1%;
   color: white;
@@ -13,14 +15,15 @@
 #artistID{
     color: white;
     text-align: left;
+    size: 40%;
 }
 /* song text */
 #songID{
     color:white;
-    text-align: center;
+    text-align: left;
 }
 /* genre text */
 #genreID{
     color: white;
-    text-align: right;
+    text-align: left;
 }
