--- a/music-app/src/components/Home/card.css
+++ b/music-app/src/components/Home/card.css
@@ -1,7 +1,7 @@
 /* music card */
 #card{
   /*background-image:url("tealfade.jpg");*/
-  background-image: url("/src/components/Home/wheel.gif");
+  /*background-image: url("/src/components/Home/wheel.gif");*/
   width: 250px;
   height: 200px;
   opacity: 0.8;
@@ -11,19 +11,39 @@
   margin: 1%;
   color: white;
 }
-/* artist text */
-#artistID{
+
+
+/* Container needed to position the button. Adjust the width as needed */
+.container {
+
+    position: relative;
+    width: 100%;
+
+  
+}
+  
+  /* Make the image responsive */
+  .container img {
+    width: 100%;
+    height: auto;
+  }
+  
+  /* Style the button and place it in the middle of the container/image */
+  .container .btn {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    background-color: rgb(53, 6, 75);
     color: white;
-    text-align: left;
-    size: 40%;
-}
-/* song text */
-#songID{
-    color:white;
-    text-align: left;
-}
-/* genre text */
-#genreID{
-    color: white;
-    text-align: left;
-}
+    font-size: 16px;
+    padding: 52px 64px;
+    border: none;
+    cursor: pointer;
+    border-radius: 10px;
+  }
+  
+  .container .btn:hover {
+    background-color: rgb(94, 3, 112);
+  }
