--- a/app/client/css/card.css
+++ b/app/client/css/card.css
@@ -166,3 +166,34 @@ button[type="submit"] {
   font-weight: bold;
   width: 80%;
 }
+
+#canvas1 {
+  margin-top: -8%;
+}
+
+#canvasButton {
+  margin-top: 2%;
+  border: none;
+  background-color: #e7e7e7;
+  color: black;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+
+#canvasButton1 {
+  border: none;
+  background-color: #e7e7e7;
+  color: black;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
