--- a/app/client/css/card.css
+++ b/app/client/css/card.css
@@ -197,3 +197,16 @@ button[type="submit"] {
   margin: 4px 2px;
   cursor: pointer;
 }
+
+#change {
+  border: 1px solid black;
+  background-color: #e7e7e7;
+  color: black;
+  padding: 8px 25px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 18px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
